--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,13 @@ ARG project_dir=/app/
 WORKDIR ${project_dir}
 
 COPY requirements.txt $project_dir
-COPY api.py $project_dir
+
 
 WORKDIR ${project_dir}
 
 RUN pip install flask
+RUN pip install PyMySQL
+RUN pip install -U FLASK-SQLAlchemy
 RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . $project_dir
